--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ html {
     font-size: 6vw;  
     display: flex;
     bottom: 36vw;
-    left: 33vw; 
+    left: 10vw; 
 }
 
 .title4 {
@@ -246,7 +246,7 @@ html {
     font-size: 2.7vh;
     position: absolute;
     top: 200px;
-    right: 33vw;
+    left: 10vw;
     height: 160px; 
     width: 450px; 
     padding: 10px;
@@ -262,10 +262,10 @@ html {
     font-style: normal;
     font-size: 2.7vh;
     position: absolute;
-    top: 320px;
-    right: 35vw;
+    top: 180px;
+    left: 10vw;
     height: 210px; 
-    width: 350px; 
+    width: 450px; 
     padding: 10px;
     color: #eadec8;
     text-align: center;
@@ -279,10 +279,10 @@ html {
     font-style: normal;
     font-size: 2.7vh;
     position: absolute;
-    top: .5vw;
-    left: 61vw;
+    top: 30vw;
+    left: 10vw;
     height: 210px; 
-    width: 350px; 
+    width: 450px; 
     padding: 10px;
     color: #eadec8;
     text-align: center;
@@ -315,6 +315,8 @@ html {
     position: absolute;
     top: 200px;
     left: 7vw;
+    width: 400px; 
+    height: 525px; 
     padding: 20px;
     color: #eadec8;
     text-align: left;
@@ -331,8 +333,8 @@ html {
 
 .homebutton2 {
     position: absolute; 
-    right: 600px; 
-    bottom: 10px; 
+    left: 525px;  
+    bottom: 100px; 
 }
 
 .homebutton3 {
@@ -438,4 +440,12 @@ html {
     height: 308px; 
     right: 765px; 
     bottom: 320px; 
+}
+
+.spgif {
+    position: absolute; 
+    width: 500px; 
+    height: 609px;
+    right: 150px; 
+    top: 125px; 
 }
