--- a/style.css
+++ b/style.css
@@ -82,9 +82,9 @@ html {
 
 .title3 {
     position: absolute; 
-    font-size: 6vw;  
+    font-size: 4vw;  
     display: flex;
-    bottom: 36vw;
+    bottom: 40vw;
     left: 10vw; 
 }
 
@@ -150,6 +150,7 @@ html {
     position: absolute;
     top: 195px;
     left: 66vw;
+    height: 510px; 
     padding: 20px;
     color: #eadec8;
     text-align: right;
@@ -391,14 +392,14 @@ html {
 }
 
 .scrolltext{
-    font-size:40px;
+    font-size:5vw;
     z-index:-1;
     color: #91251d;
     position: absolute;
-    top: 65px;
-    left: 70px;
+    top: 130px;
+    left: 650px;
     right: 70px; 
-    line-height:2;
+    line-height:1.5;
     opacity: .3; 
 }
 
@@ -447,5 +448,5 @@ html {
     width: 500px; 
     height: 609px;
     right: 150px; 
-    top: 125px; 
+    top: 170px; 
 }
